# marketpalace-securitization-contract

./: Cargo.toml  LICENSE  Makefile  README.md  test.json
.github/: CODEOWNERS
.github/workflows/: rust.yml
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  instantiate.rs  main.rs  security.rs  user.rs
crates/cli/src/query/: investor.rs  mod.rs  pending_commitments.rs  securities.rs  state.rs  version.rs
crates/cli/src/tx/: accept_commitments.rs  deposit_commitment.rs  instantiate.rs  mod.rs  propose_commitment.rs  withdraw_commitments.rs
crates/contract/: Cargo.toml  Makefile  README.md
crates/contract-controller/: Cargo.toml  Makefile  README.md
crates/contract-controller/examples/: schema.rs
crates/contract-controller/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
crates/contract-controller/src/: contract.rs  lib.rs
crates/contract-controller/src/core/: aliases.rs  constants.rs  error.rs  mod.rs  msg.rs  security.rs
crates/contract-controller/src/execute/: add_contracts.rs  create_contract.rs  migrate_all_contracts.rs  migrate_contracts.rs  mod.rs  modify_batch_size.rs  remove_contracts.rs  router.rs  validate.rs
crates/contract-controller/src/instantiate/: handler.rs  validate.rs
crates/contract-controller/src/migrate/: handler.rs
crates/contract-controller/src/query/: mod.rs  query_contract_address.rs  query_contracts.rs  query_state.rs  query_version.rs  router.rs  validate.rs
crates/contract-controller/src/reply/: handler.rs
crates/contract-controller/src/storage/: contract.rs  mod.rs  reply.rs  state.rs  uuid.rs
crates/contract-controller/src/util/: is_contract_admin.rs  migrate_contracts.rs  mod.rs  testing.rs  validate.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/cli/: all.html  fn.main.html  index.html  sidebar-items.js
docs/contract/: all.html  index.html  sidebar-items.js
docs/contract_controller/: all.html  index.html  sidebar-items.js
examples/: schema.rs
schema/: execute_msg.json  instantiate_msg.json  query_msg.json
src/: contract.rs  lib.rs
src/commitment/: mod.rs
src/core/: error.rs  (+7 more)
testutils/: deploy-local.sh  instantiate-local-with-admin.sh  instantiate-local.sh
(+685 files in other folders)
