[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["cargo"]}

contract = {path = "../contract"}
cosmwasm-std = { version = "1.1.3", features = ["cosmwasm_1_1"] }
serde_json = "1.0.91"