[package]
name = "contract-controller"
version = "1.0.3"
authors = ["Matthew Witkowski <mwitkowski@provenance.io>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""
optimize-arm = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.12.6
"""

[dependencies]
provwasm-std = { version = "2.3.0" }
cw-utils = {version = "2.0.0"}
cosmwasm-schema = "2.1.3"
cosmwasm-std = { version = "2.1.3" }
cosmwasm-storage = "1.5.2"
cw-storage-plus = { version = "2.0.0", features = ["iterator"]}
cw2 = "2.0.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
semver = "1"

[dev-dependencies]
provwasm-mocks = { version = "2.3.0" }
cw-multi-test = "0.16.2"
prost = "0.11.0"
anyhow = "1.0.65"